--- a/src/Components/Section/Section.module.css
+++ b/src/Components/Section/Section.module.css
@@ -1,3 +1,11 @@
 .section {
-  padding: 60px 0;
+  padding: 20px 0;
+}
+
+.section:first-of-type {
+  padding-top: 0px;
+}
+
+.section:last-of-type {
+  padding-bottom: 0px;
 }
